# build-ml-pipeline-for-short-term-rental-prices

./: README.md  main.py  pyproject.toml  python_env.yaml
src/basic_cleaning/: MLproject  python_env.yaml  run.py
src/data_check/: MLproject  python_env.yaml  test_data.py
src/eda/: MLproject  eda.ipynb  python_env.yaml
src/get_data/: MLproject  python_env.yaml  run.py
src/test_regression_model/: MLproject  python_env.yaml  run.py
src/train_random_forest/: MLproject  python_env.yaml  run.py
src/train_val_test_split/: MLproject  python_env.yaml  run.py
