[tool.poetry]
name = "build-ml-pipeline-for-short-term-rental-prices"
version = "0.1.0"
description = ""
authors = ["kahxuan.tan <kahxuan.tan@evco.global>"]
readme = "README.md"
packages = [{include = "build_ml_pipeline_for_short_term_rental_prices"}]

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.3.2"
pyyaml = "^6.0"
hydra-core = "1.0.6"
wandb = "^0.15.3"
pipenv = "^2023.6.2"
pyenv-win = "^3.1.1"
virtualenv = "^20.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
